--- a/loochiscord.theme.css
+++ b/loochiscord.theme.css
@@ -8,7 +8,7 @@
  */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani');
-@import url('https://patrykbielanin.github.io/discord-cyberpunk2077-theme/base.css');
+@import url('https://loochis.github.io/discord-loochis/base.css');
 
 :root {
     --background-primary: linear-gradient(180deg, rgba(23,0,5,.75) 10%, rgba(0,0,0,1) 65%); /* Background gradient */
