--- a/base.css
+++ b/base.css
@@ -2,7 +2,7 @@
     --background-primary: linear-gradient(180deg, rgba(23,0,5,.75) 10%, rgba(0,0,0,1) 65%);
     --background-secondary: linear-gradient(180deg, rgba(23,0,5,.75) 10%, rgba(0,0,0,1) 65%);
     --font-primary: 'Rajdhani';
-    --primary-text-color: lightgray;
+    --primary-text-color: rgb(255, 0, 0);
 
     --primary: 23, 13, 22;
     --red: 255, 255, 60;
